Fix title overflow

--- a/src/styles/components/card-header.scss
+++ b/src/styles/components/card-header.scss
@@ -35,13 +35,18 @@
   }
 
   &__title {
-    font-size: 3vw;
+    font-size: 5.5vh;
     text-transform: uppercase;
-    line-height: 3vw;
+    line-height: 5.5vh;
     margin: 0;
     position: relative;
     z-index: 10;
     @include font-mono();
+
+    @include mq($until: desktop) {
+      font-size: 4.5vh;
+      line-height: 4.5vh;
+    }
 
     &:after {
       content: " ";
@@ -51,20 +56,25 @@
       width: 90%;
       height: 2px;
       left: 0;
-      bottom: -1rem;
+      bottom: -.75vw;
     }
   }
 
   &__subtitle {
     text-align: right;
     text-transform: uppercase;
-    font-size: 1.75vw;
-    letter-spacing: -.15vw;
+    font-size: 3vh;
+    letter-spacing: -.15vh;
     margin: 0;
     position: absolute;
     bottom: 1.25vw;
     right: 1.25vw;
     @include font-mono(300);
+
+    @include mq($until: desktop) {
+      font-size: 2.5vh;
+      line-height: 2.5vh;
+    }
   }
 
   &__nav {
